--- a/requirements.txt
+++ b/requirements.txt
@@ -96,6 +96,7 @@ requests==2.31.0
 rpds-py==0.18.0
 scikit-learn==1.4.1.post1
 scipy==1.13.0
+seaborn==0.13.2
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.1
