--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ executing==2.0.1
 fastjsonschema==2.19.1
 fonttools==4.50.0
 idna==3.6
+imblearn
 iniconfig==2.0.0
 ipdb==0.13.13
 ipykernel==6.29.4
@@ -47,12 +48,13 @@ jupyterlab-execute-time==2.0.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
 jupyterlab_server==2.16.1
+kaggle_metrics
 kiwisolver==1.4.5
 lazy_loader==0.3
 librosa==0.10.1
 llvmlite==0.42.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
+matplotlib==3.7.0
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mistune==3.0.2
